--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     image: postgres:10.7
     ports:
       - ${DB_PORT}:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: '${DB_USER}'
       POSTGRES_PASSWORD: '${DB_PASSWORD}'
@@ -24,3 +26,5 @@ services:
     restart: always
     ports:
       - 8080:8080
+volumes:
+  pgdata:
