--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ DB_USER = YOUR POSTGRES USERNAME
 DB_PASSWORD = YOUR POSTGRES PASSWORD
 DB_NAME = YOUR POSTGRES DATABASE NAME
 SECRET_KEY = YOUR SECRET KEY (DON'T SHOW IT TO PUBLIC)
+HOST = THIS SERVER'S HOST NAME
+CLIENT_HOST = FRONTEND APP HOST NAME
+TWITCH_CLIENT_ID = TWITCH APP CLIENT_ID
+TWITCH_CLIENT_SECRET = TWITCH APP CLIENT_SECRET
