Add new variable in .env.example - TWITCH_APP_ACCESS_TOKEN

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ HOST = THIS SERVER'S HOST NAME
 CLIENT_HOST = FRONTEND APP HOST NAME
 TWITCH_CLIENT_ID = TWITCH APP CLIENT_ID
 TWITCH_CLIENT_SECRET = TWITCH APP CLIENT_SECRET
+TWITCH_APP_ACCESS_TOKEN = TWITCH APP ACCESS TOKEN
 AUTO_MIGRATION = AUTOMATICALLY RUN MIGRATIONS (SHOULD BE SET TO "TRUE" IN PRODUCTION)
 EMAIL_SERVICE = 
 EMAIL_USER = 
