Generate new module (youtube) - For handling youtube stuffs && Generate new migrations for Youtube stuffs tables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@users/*": ["src/users/*"]
+      "@users/*": ["src/users/*"],
+      "@twitch/*": ["src/twitch/*"],
+      "@youtube/*": ["src/youtube/*"]
     }
   }
 }
