Update .env.example file - Add GOOGLE_API_KEY, YOUTUBE_CLIENT_ID, YOUTUBE_CLIENT_SECRET

--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,13 @@ DB_NAME = YOUR POSTGRES DATABASE NAME
 SECRET_KEY = YOUR SECRET KEY (DON'T SHOW IT TO PUBLIC)
 HOST = THIS SERVER'S HOST NAME
 CLIENT_HOST = FRONTEND APP HOST NAME
-TWITCH_CLIENT_ID = TWITCH APP CLIENT_ID
-TWITCH_CLIENT_SECRET = TWITCH APP CLIENT_SECRET
-TWITCH_APP_ACCESS_TOKEN = TWITCH APP ACCESS TOKEN
+TWITCH_CLIENT_ID = 
+TWITCH_CLIENT_SECRET = 
+TWITCH_APP_ACCESS_TOKEN = 
+YOUTUBE_CLIENT_ID =
+YOUTUBE_CLIENT_SECRET =
 AUTO_MIGRATION = AUTOMATICALLY RUN MIGRATIONS (SHOULD BE SET TO "TRUE" IN PRODUCTION)
-EMAIL_SERVICE = 
-EMAIL_USER = 
-EMAIL_PASSWORD =
+EMAIL_SERVICE = supported services -> https://nodemailer.com/smtp/well-known/
+EMAIL_USER = Game antena email
+EMAIL_PASSWORD = 
+GOOGLE_API_KEY =
