Add new module to handle public files - /files && Add @files/ to paths in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@users/*": ["src/users/*"],
       "@twitch/*": ["src/twitch/*"],
-      "@youtube/*": ["src/youtube/*"]
+      "@youtube/*": ["src/youtube/*"],
+      "@files/*": ["src/files/*"]
     }
   }
 }
