Add new variables in .env.example file - STORAGE_ACCESS_KEY, STORAGE_SECRET_KEY, BUCKET_REGION, BUCKET_NAME

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ EMAIL_SERVICE = supported services -> https://nodemailer.com/smtp/well-known/
 EMAIL_USER = Game antena email
 EMAIL_PASSWORD = 
 GOOGLE_API_KEY =
+STORAGE_ACCESS_KEY =
+STORAGE_SECRET_KEY =
+BUCKET_REGION =
+BUCKET_NAME =
