Add path alias to files, auth, and utils directory   - Update jest configuration (map directories to path aliases defined in tsconfig.json   - Update all imports to files, auth, and utils directory (use the path aliases)

--- a/package.json
+++ b/package.json
@@ -89,6 +89,18 @@
       "json",
       "ts"
     ],
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "moduleNameMapper": {
+      "@users/(.*)": "<rootDir>/users/$1",
+      "@twitch/(.*)": "<rootDir>/twitch/$1",
+      "@youtube/(.*)": "<rootDir>/youtube/$1",
+      "@files/(.*)": "<rootDir>/files/$1",
+      "@auth/(.*)": "<rootDir>/auth/$1",
+      "@utils/(.*)": "<rootDir>/utils/$1"
+    },
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
