Add test for TwitchFetchService   - Setup dotenv in Jest config   - Use Twitch client credentials flow for getting app access token instead of Twitch CLI   - Remove unnecessary properties in SearchChannelInterface

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
       "@auth/(.*)": "<rootDir>/auth/$1",
       "@utils/(.*)": "<rootDir>/utils/$1"
     },
+    "setupFiles": ["dotenv/config"],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
