Update Gmail Sign in method   - Change from App Passwords to OAuth2   - Install new package - googleapi   - Change variables in .env file - from YOUTUBE_SOMETHING -> GOOGLE_SOMETHING   - Add new variable in .env file - GOOGLE_REFRESH_TOKEN   - Update .env.example file

--- a/.env.example
+++ b/.env.example
@@ -10,13 +10,13 @@ CLIENT_HOST = FRONTEND APP HOST NAME
 TWITCH_CLIENT_ID = 
 TWITCH_CLIENT_SECRET = 
 TWITCH_APP_ACCESS_TOKEN = 
-YOUTUBE_CLIENT_ID =
-YOUTUBE_CLIENT_SECRET =
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
+GOOGLE_API_KEY =
+GOOGLE_REFRESH_TOKEN = 
 AUTO_MIGRATION = AUTOMATICALLY RUN MIGRATIONS (SHOULD BE SET TO "TRUE" IN PRODUCTION)
 EMAIL_SERVICE = supported services -> https://nodemailer.com/smtp/well-known/
 EMAIL_USER = Game antena email
-EMAIL_PASSWORD = 
-GOOGLE_API_KEY =
 STORAGE_ACCESS_KEY =
 STORAGE_SECRET_KEY =
 BUCKET_REGION =
