--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
+    "googleapis": "^105.0.0",
     "nodemailer": "^6.7.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -101,7 +102,9 @@
       "@auth/(.*)": "<rootDir>/auth/$1",
       "@utils/(.*)": "<rootDir>/utils/$1"
     },
-    "setupFiles": ["dotenv/config"],
+    "setupFiles": [
+      "dotenv/config"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
