Update AUTO_MIGRATION description in .env.example file

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET =
 GOOGLE_API_KEY =
 GOOGLE_REFRESH_TOKEN = 
-AUTO_MIGRATION = AUTOMATICALLY RUN MIGRATIONS (SHOULD BE SET TO "TRUE" IN PRODUCTION)
+AUTO_MIGRATION = false IN DEV/LOCAL - true IN PRODUCTION
 EMAIL_SERVICE = supported services -> https://nodemailer.com/smtp/well-known/
 EMAIL_USER = Game antena email
 STORAGE_ACCESS_KEY =
